--- a/projects/front-components/src/lib/components/checkbox/checkbox.component.html
+++ b/projects/front-components/src/lib/components/checkbox/checkbox.component.html
@@ -1,14 +1,19 @@
 <label
 	class="checkbox"
+	tabindex="0"
 	[class.checkbox--active]="checked() || indeterminate()"
 	[class.checkbox--hover]="isHover()"
 	[class.checkbox--active-hover]="isHover() && checked()"
 	[class.checkbox--disabled]="isComponentDisabled()"
 	(click)="onLabelClick($event)"
+	(keydown.space)="toggleCheckbox(); $event.preventDefault()"
+	(keydown.enter)="toggleCheckbox(); $event.preventDefault()"
+	(focus)="onFocus()"
+	(blur)="onBlur()"
 >
 	<input
 		type="checkbox"
-		tabindex="0"
+		tabindex="-1"
 		style="
 			position: absolute;
 			opacity: 0;
@@ -18,15 +23,11 @@
 		"
 		[checked]="checked() || indeterminate()"
 		[disabled]="isComponentDisabled()"
-		(click)="$event.stopPropagation()"
-		(focus)="onFocus()"
-		(blur)="onBlur()"
-		(keydown.space)="toggleCheckbox(); $event.preventDefault()"
-		(keydown.enter)="toggleCheckbox(); $event.preventDefault()"
 	/>
 
 	<div
 		class="checkbox__box"
+		(click)="onLabelClick($event)"
 		(mouseenter)="onMouseEnter()"
 		(mouseleave)="onMouseLeave()"
 	>
@@ -42,6 +43,7 @@
 	<span
 		*ngIf="label() || description()"
 		class="checkbox__texts"
+		(click)="onLabelClick($event)"
 	>
 		<ss-lib-text
 			*ngIf="label()"
