feature/today-click-fix: disable click today if today date is not allowed

--- a/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
@@ -2,6 +2,7 @@
 	<ss-lib-button
 		[type]="ButtonType.Secondary"
 		[text]="todayLabel"
+		[disabled]="itemIsDisabled(CalendarDay.currentLocal())"
 		(click)="setToday()"
 	/>
 
