--- a/projects/front-components/src/lib/components/icon/icon.component.html
+++ b/projects/front-components/src/lib/components/icon/icon.component.html
@@ -4,6 +4,7 @@
 		[ngStyle]="{
 			'width.px': width(),
 			'height.px': height(),
+			strokeWidth: strokeWidth(),
 			color: color(),
 		}"
 		[innerHTML]="svg()"
