--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -1,4 +1,4 @@
-/* ⬇️ Brand */
+/* Brand */
 :root {
 	--blue-100: #fbfdfe;
 	--blue-1000: #074779;
@@ -106,8 +106,8 @@
 	/* string */
 	--type-font-family-body: onest;
 	--type-font-family-heading: onest;
-	--type-font-weight-bold: bold;
-	--type-font-weight-medium: medium;
-	--type-font-weight-regular: regular;
-	--type-font-weight-semibold: semibold;
+	--type-font-family-font-weight-bold: bold;
+	--type-font-family-font-weight-medium: medium;
+	--type-font-family-font-weight-regular: regular;
+	--type-font-family-font-weight-semibold: semibold;
 }
