feature/3632-toast-fix: fix toast styles

--- a/projects/front-components/src/lib/components/buttons/button/button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/button/button.component.scss
@@ -162,6 +162,7 @@ button.custom-button:disabled.type-primary {
 // *************** SECONDARY ***************
 button.custom-button.type-secondary {
 	outline: 1px solid var(--border-secondary);
+	outline-offset: -1px;
 	background: var(--surface-primary);
 	box-shadow: var(
 		--app-border-shadow-secondary-btn,
