--- a/projects/front-components/src/lib/components/tooltip/tooltip.component.scss
+++ b/projects/front-components/src/lib/components/tooltip/tooltip.component.scss
@@ -1,6 +1,6 @@
 $horizontalTooltipOffset: 20px;
 $verticalTooltipOffset: 10px;
-$verticalArrowOffset: 5.5px;
+$verticalArrowOffset: 8px;
 
 .tooltip {
 	position: fixed;
@@ -9,18 +9,36 @@ $verticalArrowOffset: 5.5px;
 	border-radius: var(--border-radius-md);
 	padding: 8px 12px;
 	opacity: 0;
-	background: var(--surface-tertiary, #1c1c1c);
+	background: var(--surface-tetriary);
 	box-shadow:
 		0 2px 2px -1px #0a0d120a,
 		0 4px 6px -2px #0a0d1208,
 		0 12px 16px -4px #0a0d1214;
 
+	outline: 1px solid var(--border-tertiary);
+
+
+	//TODO: заменить цвета на токены --surface-tetriary и --border-tertiary в svg
 	&::before {
 		content: '';
-		width: 0;
-		height: 0;
 		position: absolute;
-		border: 6px solid var(--surface-tertiary, #1c1c1c);
+		width: 16px;
+		height: 18px;
+		background-image: url("data:image/svg+xml;utf8,\
+		<svg width='16' height='18' viewBox='0 0 16 18' fill='none' xmlns='http://www.w3.org/2000/svg'>\
+		<path d='M8.01476 2.92883C8.01468 2.4835 7.47623 2.26048 7.16126 2.57528L1.09008 8.64645C0.894821 8.84171 0.894821 9.15829 1.09008 9.35355L7.16126 15.4247C7.47624 15.7395 8.01468 15.5165 8.01476 15.0712L8.01476 2.92883Z' fill='%231F1F1E' stroke='%23353534'/>\
+		<path d='M6.99998 0.5L15.5 9.00001L6.99999 17.5L6.99998 0.5Z' fill='%231F1F1E'/>\
+		</svg>");
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: center;
+	}
+
+	//
+
+	&::before svg path {
+		fill: red !important;
+		stroke: var(--border-tertiary);
 	}
 
 	&--visible {
@@ -31,11 +49,9 @@ $verticalArrowOffset: 5.5px;
 		transform: translate(-50%, $verticalTooltipOffset);
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-top: none;
-			left: calc(50% - 6px);
+			left: calc(50% - 8px);
 			top: calc(-1 * $verticalArrowOffset);
+			transform: rotate(90deg);
 		}
 	}
 
@@ -46,11 +62,9 @@ $verticalArrowOffset: 5.5px;
 		);
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-top: none;
-			left: calc(100% - 26px);
+			left: calc(100% - 28px);
 			top: calc(-1 * $verticalArrowOffset);
+			transform: rotate(90deg);
 		}
 	}
 
@@ -61,11 +75,9 @@ $verticalArrowOffset: 5.5px;
 		);
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-top: none;
-			left: 15px;
+			left: 13px;
 			top: calc(-1 * $verticalArrowOffset);
+			transform: rotate(90deg);
 		}
 	}
 
@@ -73,11 +85,9 @@ $verticalArrowOffset: 5.5px;
 		transform: translate(-50%, calc(-100% - $verticalTooltipOffset));
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-bottom: none;
-			left: calc(50% - 6px);
+			left: calc(50% - 8px);
 			bottom: calc(-1 * $verticalArrowOffset);
+			transform: rotate(-90deg);
 		}
 	}
 
@@ -88,11 +98,9 @@ $verticalArrowOffset: 5.5px;
 		);
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-bottom: none;
-			left: calc(100% - 26px);
+			left: calc(100% - 28px);
 			bottom: calc(-1 * $verticalArrowOffset);
+			transform: rotate(-90deg);
 		}
 	}
 
@@ -103,11 +111,9 @@ $verticalArrowOffset: 5.5px;
 		);
 
 		&::before {
-			border-left-color: transparent;
-			border-right-color: transparent;
-			border-bottom: none;
-			left: 15px;
+			left: 13px;
 			bottom: calc(-1 * $verticalArrowOffset);
+			transform: rotate(-90deg);
 		}
 	}
 
@@ -115,11 +121,9 @@ $verticalArrowOffset: 5.5px;
 		transform: translate(calc(-100% - $verticalTooltipOffset), -50%);
 
 		&::before {
-			border-top-color: transparent;
-			border-bottom-color: transparent;
-			border-right: none;
-			right: calc(-1 * 6px);
-			top: calc(50% - $verticalArrowOffset);
+			right: calc(-1 * 7px);
+			top: calc(50% - $verticalArrowOffset - 1px);
+			transform: rotate(-180deg);
 		}
 	}
 
@@ -130,8 +134,8 @@ $verticalArrowOffset: 5.5px;
 			border-top-color: transparent;
 			border-bottom-color: transparent;
 			border-left: none;
-			left: calc(-1 * 6px);
-			top: calc(50% - $verticalArrowOffset);
+			left: calc(-1 * 7px);
+			top: calc(50% - $verticalArrowOffset - 1px);
 		}
 	}
 }
