feature/3631-calendar-disable-fix: fix active+disabled styles

--- a/projects/front-components/src/lib/components/calendar/components/calendar-cell/calendar-cell.component.scss
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-cell/calendar-cell.component.scss
@@ -45,7 +45,8 @@
 		}
 
 		&.calendar-cell_disabled {
-			color: var(--text-on-disabled);
+			background: var(--surface-disabled-selected);
+			color: var(--text-on-action);
 			pointer-events: none !important;
 			cursor: default;
 		}
